# dphpc-ducks

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
benchmarks/: boost.csv  graphgen-baseline.csv  graphgen-mls.csv  graphgen.csv  sequential.csv
data/: Makefile
plots/: Makefile  comparison.py
scripts/: benchmark-boost.sh  benchmark-graphgen.sh  benchmark-mst.sh  benchmark-sequential.sh  draw-boost.sh  draw-example.sh  draw-sequential.sh  gen_lfsr_taps.py  lfsr_taps.txt
src/: bench-graph.cpp  graph.hpp  graphviz.hpp  lfsr_taps.hpp  main-boost.cpp  main-graphgen.cpp  main-parallel.cpp  main-sequential.cpp  maxlenrandseq.hpp  partial_forest.hpp  performance.hpp  prim-example.cpp  prim_msf.cpp  prim_msf.hpp  uniform_pairs.hpp  vector_graph.hpp  verification.hpp
test/: check_pf_merges.hpp  maxlenrandseq.cpp  partial_forest.cpp  pass_fail_tests.hpp  prim_merge_forests.cpp  uniform_pairs.cpp
